applications/software/cluster/portfoliosh/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: portfoliosh
spec:
  replicas: 1
  selector:
    matchLabels:
      app: portfoliosh
  template:
    metadata:
      labels:
        app: portfoliosh
    spec:
      automountServiceAccountToken: false
      securityContext:
        runAsNonRoot: true
        runAsUser: 65532
        runAsGroup: 65532
        seccompProfile:
          type: RuntimeDefault
      containers:
      - image: ghcr.io/yyewolf/portfoliosh:latest@sha256:bbaaa4bec645fcd6dfaff052c2b7bccb81924d8e46dc6d2125e4e1417a7d7197
        imagePullPolicy: IfNotPresent
        name: portfoliosh
        securityContext:
          allowPrivilegeEscalation: false
          readOnlyRootFilesystem: true
          runAsNonRoot: true
          capabilities:
            drop:
            - ALL
          seccompProfile:
            type: RuntimeDefault
        resources:
          requests:
            cpu: 0m
            memory: 0Mi
          limits:
            cpu: 200m
            memory: 200Mi
        ports:
        - name: ssh
          containerPort: 2222
        volumeMounts:
        - name: host-keys
          mountPath: /hostkey.pem
          subPath: hostkey.pem
          readOnly: true
      volumes:
      - name: host-keys
        secret:
          secretName: ssh-host-keys
          items:
          - key: ssh_host_ed25519_key
            path: hostkey.pem
