applications/software/cluster/portfoliosh/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: portfoliosh
spec:
  ports:
  - name: ssh
    port: 22
    targetPort: ssh
  selector:
    app: portfoliosh
