applications/software/cluster/portfoliosh/network-policy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: policy
spec:
  endpointSelector: {}
  ingress:
  - fromEndpoints:
    - {}
  - fromEndpoints:
    - matchLabels:
        io.kubernetes.pod.namespace: envoy-system
